--- a/journal.org
+++ b/journal.org
@@ -320,14 +320,14 @@ head(df)
 #+RESULTS:
 :  
 :    x          y
-: 1 57  -48.30702
-: 2 52  -43.57117
-: 3 40  -31.34614
-: 4 86 -118.25581
-: 5 85 -104.06467
-: 6 34  -17.04022
+: 1 53 -50.228060
+: 2 60 -66.521457
+: 3 26   4.949108
+: 4 18   2.624106
+: 5 15  24.501256
+: 6 24  -9.271574
 
-#+begin_src R :results output graphics :file ./images/figure.png :exports both :width 600 :height 400 :session *R* 
+#+begin_src R :results output graphics :file ./images/ex1_figure.png :exports both :width 600 :height 400 :session *R* 
 library(ggplot2)
 ggplot(df, aes(x=x, y=y))+geom_point(alpha=0.3)
 #+end_src
@@ -335,7 +335,8 @@ ggplot(df, aes(x=x, y=y))+geom_point(alpha=0.3)
 #+RESULTS:
 [[file:./images/figure.png]]
 
-Then, we define a stan model.
+Then, we define a stan model to find our parameters (intercept,
+coefficient and sigma) that we now assume unknown 
 
 #+begin_src R :results output :session *R* :exports both
 library(rstan)
@@ -364,7 +365,131 @@ sm = stan_model(model_code = modelString)
 
 #+end_src
 
+#+begin_src R :results output :session *R* :exports both
+data = list(N=nrow(df),x=df$x,y=df$y)
+fit = sampling(sm,data=data, iter=500, chains=8)
+print(fit)
+#+end_src
+
 #+RESULTS:
+#+begin_example
+Inference for Stan model: ea4b5a288cf5f1d87215860103a9026e.
+8 chains, each with iter=500; warmup=250; thin=1; 
+post-warmup draws per chain=250, total post-warmup draws=2000.
+
+                mean se_mean   sd     2.5%      25%      50%      75%    97.5%
+intercept      49.74    0.05 1.36    47.04    48.85    49.74    50.63    52.53
+coefficient    -2.00    0.00 0.02    -2.04    -2.01    -1.99    -1.98    -1.95
+sigma          15.19    0.01 0.47    14.31    14.88    15.18    15.49    16.13
+lp__        -1621.74    0.04 1.18 -1624.81 -1622.26 -1621.43 -1620.86 -1620.41
+            n_eff Rhat
+intercept     896 1.01
+coefficient   953 1.01
+sigma        1134 1.01
+lp__          763 1.00
+
+Samples were drawn using NUTS(diag_e) at Tue May  7 10:50:03 2019.
+For each parameter, n_eff is a crude measure of effective sample size,
+and Rhat is the potential scale reduction factor on split chains (at 
+convergence, Rhat=1).
+#+end_example
+
+As we can see, Stan can find back the parameters given a close enough
+model.
+
+#+begin_src R :results output graphics :file ./images/ex1_stan_plot.png :exports both :width 600 :height 400 :session *R* 
+stan_plot(fit)
+#+end_src
+
+#+RESULTS:
+[[file:./images/stan_plot.png]]
+
+#+begin_src R :results output graphics :file ./images/ex1_stan_trace.png :exports both :width 600 :height 400 :session *R* 
+stan_trace(fit)
+#+end_src
+
+#+RESULTS:
+[[file:./images/stan_trace.png]]
+
+#+begin_src R :results output graphics :file ./images/ex1_stan_hist.png :exports both :width 600 :height 400 :session *R* 
+stan_hist(fit)
+#+end_src
+
+#+RESULTS:
+[[file:./images/stan_hist.png]]
+
+#+begin_src R :results output graphics :file ./images/ex1_stan_dens.png :exports both :width 600 :height 400 :session *R* 
+stan_dens(fit) #attention à la densité, elle n'est pas toujours pertinente
+#+end_src
+
+#+RESULTS:
+[[file:./images/stan_dens.png]]
+
+*** 2019-05-07 tuesday
+**** Tried to use Stan with more complex examples :STAN:R:
+***** With noise depending on x
+
+We generate data, this time with noise depending on x. This time,
+we're careful not to have any x=0 since that would produce bogus data
+for sigma.
+
+#+begin_src R :results output :session *R* :exports both
+generate_dataset=function(intercept, coefficient, N, min_x=1, max_x=100, sigma=1){
+    x = sample(min_x:max_x,N,replace=T) 
+    y = coefficient * x + intercept + rnorm(N,sd=sigma*x)
+    df = data.frame(x=x,y=y)
+    return(df)
+}
+df=generate_dataset(12, 50, 500, sigma=15)
+head(df)
+#+end_src
+
+#+RESULTS:
+:  
+:    x        y
+: 1 17 1200.497
+: 2 52 2663.708
+: 3 85 4234.701
+: 4 42 2494.610
+: 5 68 4240.304
+: 6 86 2746.118
+
+#+begin_src R :results output graphics :file ./images/ex2_figure.png :exports both :width 600 :height 400 :session *R* 
+library(ggplot2)
+ggplot(df, aes(x=x, y=y))+geom_point(alpha=0.3)
+#+end_src
+
+#+RESULTS:
+[[file:./images/ex2_figure.png]]
+
+Then, we define a stan model to find our parameters
+
+#+begin_src R :results output :session *R* :exports both
+library(rstan)
+
+modelString = "data { // the observations
+    int<lower=1> N; // number of points
+    vector[N] x;
+    vector[N] y;
+}
+parameters { // what we want to find
+    real intercept;
+    real coefficient;
+    real<lower=0> sigma; // indication: sigma cannot be negative
+} 
+model {
+    // We define our priors
+    intercept   ~ normal(0, 10); // We know that all the parameters follow a normal distribution
+    coefficient ~ normal(0, 10);
+    sigma       ~ normal(0, 10);
+
+    // Then, our likelihood function
+    y ~ normal(coefficient*x + intercept, sigma*x);
+}
+"
+sm = stan_model(model_code = modelString)
+
+#+end_src
 
 #+begin_src R :results output :session *R* :exports both
 data = list(N=nrow(df),x=df$x,y=df$y)
@@ -375,39 +500,65 @@ print(fit)
 #+RESULTS:
 #+begin_example
 
-Inference for Stan model: ea4b5a288cf5f1d87215860103a9026e.
+Inference for Stan model: 12d920cec7fd90b16640e34f6f5a767a.
 8 chains, each with iter=500; warmup=250; thin=1; 
 post-warmup draws per chain=250, total post-warmup draws=2000.
 
                 mean se_mean   sd     2.5%      25%      50%      75%    97.5%
-intercept      48.28    0.04 1.31    45.72    47.40    48.29    49.15    50.97
-coefficient    -1.97    0.00 0.02    -2.01    -1.98    -1.97    -1.95    -1.92
-sigma          14.48    0.01 0.46    13.63    14.16    14.46    14.79    15.41
-lp__        -1596.29    0.04 1.23 -1599.49 -1596.88 -1595.98 -1595.37 -1594.87
+intercept       9.42    0.13 4.87    -0.17     6.16     9.28    12.77    19.16
+coefficient    50.18    0.02 0.68    48.86    49.73    50.20    50.65    51.48
+sigma          14.42    0.01 0.45    13.60    14.10    14.41    14.71    15.32
+lp__        -3438.43    0.04 1.20 -3441.45 -3438.98 -3438.13 -3437.57 -3437.08
             n_eff Rhat
-intercept     969 1.00
-coefficient  1054 1.00
-sigma        1029 1.01
-lp__          800 1.00
+intercept    1364 1.00
+coefficient  1629 1.00
+sigma        1901 1.00
+lp__          933 1.01
 
-Samples were drawn using NUTS(diag_e) at Mon May  6 19:07:45 2019.
+Samples were drawn using NUTS(diag_e) at Tue May  7 11:03:57 2019.
 For each parameter, n_eff is a crude measure of effective sample size,
 and Rhat is the potential scale reduction factor on split chains (at 
 convergence, Rhat=1).
 #+end_example
 
-#+begin_src R :results output graphics :file ./images/stan_plot.png :exports both :width 600 :height 400 :session *R* 
-plot(fit)
+This time, the intercept is farther from its actual value, because of
+a high standard deviation in its estimation (4.87). This high
+deviation is seen in the plot as a red line.
+
+#+begin_src R :results output graphics :file ./images/ex2_plot.png :exports both :width 600 :height 400 :session *R* 
+stan_plot(fit)
 #+end_src
 
 #+RESULTS:
-[[file:./images/stan_plot.png]]
+[[file:./images/ex2_plot.png]]
 
-#+begin_src R :results output graphics :file ./images/stan_trace.png :exports both :width 600 :height 400 :session *R* 
-traceplot(fit)
+#+begin_src R :results output graphics :file ./images/ex2_trace.png :exports both :width 600 :height 400 :session *R* 
+stan_trace(fit)
 #+end_src
 
 #+RESULTS:
-[[file:./images/stan_trace.png]]
+[[file:./images/ex2_trace.png]]
 
+#+begin_src R :results output graphics :file ./images/ex2_hist.png :exports both :width 600 :height 400 :session *R* 
+stan_hist(fit)
+#+end_src
 
+#+RESULTS:
+[[file:./images/ex2_hist.png]]
+
+**** Search for a way to generate data once Stan has found the parameters :STAN:
+- Looked at different packages such as rstanarm but they are too restricted
+- Looked at Stan's program blocks
+  + The data block lists the data we'll give to Stan. It's possible to
+    use restrictions between < > (the data won't be negative...). 
+    Within a block, anything declared, can then be used subsequently.
+  + The transformed data block is used to create new data based on the
+    input data. It has no particular use for this case.
+  + The parameters block indicates the parameters that will be estimated
+    by Stan.
+  + The transformed parameters block includes optional parameters that
+    are dependent on the previous parameters.
+  + The model block specifies the priors and likelihood
+  + Finally, the generated quantities block calculates any data based
+    on the model's results, so it might be useful in this case.
+**** TODO An example with generated quantities
