methode pour generer des nouvelles donnees a partir du modele de stan

--- a/journal.org
+++ b/journal.org
@@ -545,7 +545,6 @@ stan_hist(fit)
 
 #+RESULTS:
 [[file:./images/ex2_hist.png]]
-
 **** Search for a way to generate data once Stan has found the parameters :STAN:
 - Looked at different packages such as rstanarm but they are too restricted
 - Looked at Stan's program blocks
@@ -561,4 +560,140 @@ stan_hist(fit)
   + The model block specifies the priors and likelihood
   + Finally, the generated quantities block calculates any data based
     on the model's results, so it might be useful in this case.
-**** TODO An example with generated quantities
+*** 2019-05-09 thursday
+**** STARTED An example with generated quantities
+:LOGBOOK:  
+- State "STARTED"    from "TODO"       [2019-05-09 jeu. 09:42]
+:END:      
+
+As usual we start by generating data. We'll take a simple example.
+
+#+begin_src R :results output :session *R* :exports both
+library(ggplot2)
+library(rstan)
+generate_dataset=function(intercept, coefficient, N, min_x=0, max_x=100, sigma=1){
+    x = sample(min_x:max_x,N,replace=T) 
+    y = coefficient * x + intercept + rnorm(N,sd=sigma)
+    df = data.frame(x=x,y=y)
+    return(df)
+}
+df=generate_dataset(12, 3, 500, sigma=15)
+head(df)
+#+end_src
+
+#+RESULTS:
+#+begin_example
+   x         y
+1 50 162.69930
+2 46 160.77595
+3 16  60.37135
+4 24 100.82896
+5  7  35.89649
+6 62 198.99881
+#+end_example
+
+#+begin_src R :results output graphics :file ./images/ex3_figure.png :exports both :width 600 :height 400 :session *R* 
+library(ggplot2)
+ggplot(df, aes(x=x, y=y))+geom_point(alpha=0.3)
+#+end_src
+
+#+RESULTS:
+[[file:./images/ex3_figure.png]]
+
+Then, we define a stan model to find our parameters, and we generate
+some y after making the sample.
+
+#+begin_src R :results output :session *R* :exports both
+library(rstan)
+
+modelString = "data { // the observations
+    int<lower=1> N; // number of points
+    vector[N] x;
+    vector[N] y;
+}
+parameters { // what we want to find
+    real intercept;
+    real coefficient;
+    real<lower=0> sigma; // indication: sigma cannot be negative
+} 
+model {
+    // We define our priors
+    intercept   ~ normal(0, 10); // We know that all the parameters follow a normal distribution
+    coefficient ~ normal(0, 10);
+    sigma       ~ normal(0, 10);
+
+    // Then, our likelihood function
+    y ~ normal(coefficient*x + intercept, sigma);
+}
+generated quantities {
+  vector[N-1] y_pos; // posterior predictions
+  for (n in 1:(N-1))
+    y_pos[n] = normal_rng(coefficient*x[n]+intercept, sigma);
+}
+"
+sm = stan_model(model_code = modelString)
+
+#+end_src
+
+#+begin_src R :results output :session *R* :exports both
+data = list(N=nrow(df),x=df$x,y=df$y)
+fit = sampling(sm,data=data, iter=500, chains=8)
+print(fit)
+#+end_src
+
+#+RESULTS:
+#+begin_example
+
+Inference for Stan model: 1320753aed3b274adf33c75cc2f6ee92.
+8 chains, each with iter=500; warmup=250; thin=1; 
+post-warmup draws per chain=250, total post-warmup draws=2000.
+
+                mean se_mean    sd     2.5%      25%      50%      75%    97.5%  n_eff  Rhat
+intercept      12.05    0.04  1.31     9.40    11.17    12.10    12.98    14.42    888  1.01
+coefficient     3.00    0.00  0.02     2.96     2.99     3.00     3.02     3.05    921  1.01
+sigma          14.55    0.01  0.45    13.77    14.24    14.54    14.84    15.46   1359  1.01
+lp__        -1588.56    0.04  1.20 -1591.77 -1589.06 -1588.24 -1587.68 -1587.20    783  1.01
+                   
+Samples were drawn using NUTS(diag_e) at Thu May  9 09:55:30 2019.
+For each parameter, n_eff is a crude measure of effective sample size,
+and Rhat is the potential scale reduction factor on split chains (at 
+convergence, Rhat=1).
+#+end_example
+
+#+begin_src R :results output graphics :file ./images/ex3_plot.png :exports both :width 600 :height 400 :session *R* 
+stan_plot(fit, pars = c("intercept", "coefficient", "sigma"))
+#+end_src
+
+#+RESULTS:
+[[file:./images/ex3_plot.png]]
+
+#+begin_src R :results output graphics :file ./images/ex3_trace.png :exports both :width 600 :height 400 :session *R* 
+stan_trace(fit, pars = c("intercept", "coefficient", "sigma"))
+#+end_src
+
+#+RESULTS:
+[[file:./images/ex3_trace.png]]
+
+#+begin_src R :results output graphics :file ./images/ex3_hist.png :exports both :width 600 :height 400 :session *R* 
+stan_hist(fit, pars = c("intercept", "coefficient", "sigma"))
+#+end_src
+
+#+RESULTS:
+[[file:./images/ex3_hist.png]]
+
+Now we look at the generated y
+
+#+begin_src R :results output :session *R* :exports both
+extracted=extract(fit)
+mean(extracted$y_pos)
+mean(data$y)
+#+end_src
+
+#+RESULTS:
+: [1] 162.8246
+: [1] 162.9518
+
+From this mean, we can say the generated y are reasonably close enough
+to the data we generated at the beginning, but not exactly similar of
+course, since we have an approximation of the parameters (intercept,
+coefficient and sigma).
